# TissUUmaps-schema

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  generate-site.sh  pyproject.toml  setup.cfg
.github/workflows/: test-and-deploy.yml
tests/: test_formats.py
tests/formats/: test_format_v1.py  test_format_v2.py
tissuumaps_schema/: __init__.py  __main__.py  _cli.py  base.py  utils.py
tissuumaps_schema/formats/: __init__.py  format.py  model.py
tissuumaps_schema/formats/v01/: format.py  model.py
tissuumaps_schema/formats/v02/: __init__.py  format.py  model.py
tissuumaps_schema/schemas/: __init__.py  base.py
tissuumaps_schema/schemas/v01/: __init__.py  _v01.py  project.py
tissuumaps_schema/schemas/v02/: __init__.py  _v02.py  project.py
tissuumaps_schema/v00/: base.py  project.py
tissuumaps_schema/v01/: project.py
tissuumaps_schema/v02/: project.py
